--- a/UskudarDenetim.Core/UskudarDenetim.Core.csproj
+++ b/UskudarDenetim.Core/UskudarDenetim.Core.csproj
@@ -45,7 +45,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EntityModel\ModelAddress.cs" />
+    <Compile Include="IdentityViewModel\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ViewModel\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
