Çalışan güncelleme Ekranları Yapıldı.ContactUS ekranları Yapıldı

--- a/UskudarDenetim.Core/UskudarDenetim.Core.csproj
+++ b/UskudarDenetim.Core/UskudarDenetim.Core.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="EntityModel\ModelAddress.cs" />
     <Compile Include="Enums\UskudarDenetimEnums.cs" />
+    <Compile Include="Extensions\UDExtension.cs" />
     <Compile Include="IdentityViewModel\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
