--- a/UskudarDenetim.UI/UskudarDenetim.UI.csproj
+++ b/UskudarDenetim.UI/UskudarDenetim.UI.csproj
@@ -537,6 +537,8 @@
     <Content Include="Views\Services\ServiceDetail.cshtml" />
     <Content Include="Views\Services\ServiceModal.cshtml" />
     <Content Include="Views\HR\Index.cshtml" />
+    <Content Include="Views\HR\Applys.cshtml" />
+    <Content Include="Views\HR\ApplyDetail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
