Footer backend geliştirmeleri tamamlanıldı

--- a/UskudarDenetim.Core/UskudarDenetim.Core.csproj
+++ b/UskudarDenetim.Core/UskudarDenetim.Core.csproj
@@ -47,6 +47,7 @@
     <Compile Include="EntityModel\ModelAddress.cs" />
     <Compile Include="Enums\UskudarDenetimEnums.cs" />
     <Compile Include="Extensions\UDExtension.cs" />
+    <Compile Include="Helper\UskudarDenetimHelper.cs" />
     <Compile Include="IdentityViewModel\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
