--- a/UskudarDenetim.UI/Web.config
+++ b/UskudarDenetim.UI/Web.config
@@ -9,8 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="UskudarDenetimIdentity" connectionString="Data Source=DESKTOP-7DRA6AF;     Initial Catalog=UskudarDenetimIdentity;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="UskudarDenetimEntities" connectionString="metadata=res://*/EF.Model1.csdl|res://*/EF.Model1.ssdl|res://*/EF.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-7DRA6AF;initial catalog=UskudarDenetim;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="UskudarDenetimIdentity" connectionString="Data Source=213.128.89.156;    Database=musa_UdIdentity;User Id=ud_identity_user;
+Password=0zJg^v82;" providerName="System.Data.SqlClient" />
+    <!--<add name="UskudarDenetimEntities" connectionString="metadata=res://*/EF.Model1.csdl|res://*/EF.Model1.ssdl|res://*/EF.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-7DRA6AF;initial catalog=UskudarDenetim;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="musa_UdMainEntities" connectionString="metadata=res://*/EF.Model1.csdl|res://*/EF.Model1.ssdl|res://*/EF.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=213.128.89.156;initial catalog=musa_UdMain;persist security info=True;user id=ud_main_user;password=56I#bp6a;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
