--- a/UskudarDenetim.UI/Web.config
+++ b/UskudarDenetim.UI/Web.config
@@ -10,9 +10,9 @@
   </configSections>
   <connectionStrings>
     <add name="UskudarDenetimIdentity" connectionString="Data Source=213.128.89.156;    Database=musa_UdIdentity;User Id=ud_identity_user;
-Password=;" providerName="System.Data.SqlClient" />
+Password=0zJg^v82;" providerName="System.Data.SqlClient" />
     <!--<add name="UskudarDenetimEntities" connectionString="metadata=res://*/EF.Model1.csdl|res://*/EF.Model1.ssdl|res://*/EF.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-7DRA6AF;initial catalog=UskudarDenetim;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="musa_UdMainEntities" connectionString="metadata=res://*/EF.Model1.csdl|res://*/EF.Model1.ssdl|res://*/EF.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=213.128.89.156;initial catalog=musa_UdMain;persist security info=True;user id=ud_main_user;password=;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="musa_UdMainEntities" connectionString="metadata=res://*/EF.Model1.csdl|res://*/EF.Model1.ssdl|res://*/EF.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=213.128.89.156;initial catalog=musa_UdMain;persist security info=True;user id=ud_main_user;password=56I#bp6a;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
