--- a/UskudarDenetim.Repository/App.Config
+++ b/UskudarDenetim.Repository/App.Config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
     <!--<add name="UskudarDenetimEntities" connectionString="metadata=res://*/EF.Model1.csdl|res://*/EF.Model1.ssdl|res://*/EF.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-7DRA6AF;initial catalog=UskudarDenetim;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="musa_UdMainEntities" connectionString="metadata=res://*/EF.Model1.csdl|res://*/EF.Model1.ssdl|res://*/EF.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=213.128.89.156;initial catalog=musa_UdMain;persist security info=True;user id=ud_main_user;password=;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="musa_UdMainEntities" connectionString="metadata=res://*/EF.Model1.csdl|res://*/EF.Model1.ssdl|res://*/EF.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=213.128.89.156;initial catalog=musa_UdMain;persist security info=True;user id=ud_main_user;password=56I#bp6a;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
